# carto-waze-lambda

./: .gitignore  .pylintrc  LICENSE  README.md  config.example.env  create_tables.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  run-pylint.sh  run_handler.py  run_handler_dev.py  serverless.example.yml  serverless.yml
db/: create_tables.sql
db/big_query/: alerts.sql  alerts_agg_hour.sql  durations_agg.sql  irregularities.sql  jams.sql  jams_agg_hour.sql  jams_agg_levels_times.sql  jams_agg_times.sql
db/big_query/jobs/: irrgs_hour.sql  irrgs_levels_times.sql  irrgs_times.sql  jams_hour.sql  jams_levels_times.sql  jams_times.sql
db/plpgsql/: build_historic_accidents.sql  build_historic_jams.sql  get_historic_jams.sql  traffico_create_tables.sql
src/: __init__.py  carto.py  cartomodel.py  config.py  daily_agg_handler.py  handler.py  logger.py  waze.py  wazecartomodel.py  wazedata.py  wazegeorss.py
src/models/: base.py  cartomodel.py  waze_bq_model.py  wazecartomodel.py
